archive/hello-python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-dc01
#  labels:    #### This is added for GSLB
#    app: gslb #### This is added for GSLB - Using the selector I chose in the value.yaml
#  annotations:
#    ako.vmware.com/enable-tls: "true"
spec:
  ingressClassName: kommander-traefik
  rules:
#    - host: hello.k8s.cpod-sivt-dc01.az-lhr.cloud-garage.net
    - http:
        paths:
        - path: /hello
          pathType: ImplementationSpecific
          backend:
            service:
              name: frontend
              port:
                number: 80
